mule-user-guide/v/3.5/sftp-connector.adoc
=  SFTP连接器

SFTP连接器实现安全文件传输通道，以便您的Mule应用程序可以与外部资源交换文件。 SFTP使用SSH安全协议传输消息。您可以将SFTP端点实现为具有单向交换模式的入站端点，或者配置为单向或请求 - 响应交换模式的出站端点。

== 安装

您可以使用 link:/mule-user-guide/v/3.5/installing-connectors[从Anypoint Exchange安装连接器]中的说明在Anypoint Studio中安装连接器。

== 配置

SFTP端点配置包含两个阶段：

. 决定将SFTP端点放置在Mule流中的位置，然后将其从调色板拖放到构成Mule流的构建模块序列中的适当位置。
.. 如果您将SFTP端点放置在流的开始位置，它将作为入站端点（消息源），在接收到消息时触发流。 （您也可以使用*Composite Source*作用域将SFTP端点与其他类似端点（例如文件或UDP）一起打包，以便您的流可以通过多个传输通道接收文件）。
.. 如果您将SFTP构建块放在流的中间或末尾，它将用作出站端点，将信息从流中传递到外部资源。
+
SFTP入站端点只能设置为*one-way*交换模式。 SFTP出站终端可以设置为单向或*request-response*交换模式。
. 通过为属性编辑器上各个选项卡上的字段提供值来配置SFTP端点，您可以通过单击消息流画布上的SFTP图标来打开它。

常规选项卡== 

image:studio-sftp-gen.png[图片]

[%header,cols="2*"]
|===
| {字段{1}}说明
| *Display Name*  |默认为通用端点名称，在本例中为SFTP。更改显示名称必须是字母数字，以反映端点的特定角色，例如`File Retrieval Endpoint.`
| *Exchange Pattern*  |如果设置为单向，则SFTP入站或出站端点会将传入消息发送到流程中的下一个构建块。如果SFTP出站端点设置为请求响应（SFTP入站端点不能设置为请求响应），那么出站端点在发送消息之前会等待响应。 *One-way*是入站和出站SFTP端点的默认值。
| *Connector Configuration*  |使用下拉列表为此端点选择以前配置的连接器配置。如果您尚未为此类端点创建连接器配置，则可以通过单击绿色加号（*+*）从此窗口中单击编辑图标 image:EditIcon.png[EditIcon]来修改先前创建的全局元素。

| *Output Pattern* a |
_（仅适用于出站SFTP端点。）_指定命名从File端点发送到连接的文件系统的文件的模式。如果未设置，则File端点将使用用于传入文件的相同文件命名模式。

例：

[source, code, linenums]
----
#[header:inbound:originalFilename]
----
| *Host*  |识别传出（本地）SFTP服务器，然后提供用于连接到此服务器的用户凭证。默认为*localhost*。在连接到外部SFTP服务器的主机上输入服务器的完全限定域名（FQDN）或IP地址。
| *Port*  |连接到本地（主机）服务器的端口。 （通常，*22*）
| *Path*  |指定一个便于连接到本地服务器的路径，以便您不必提供用户名和密码。
| *User*  |主机服务器上的身份验证用户名。
| *Password*  |主机服务器上的身份验证密码。
|===

== 常规选项卡 - 全局元素属性屏幕

单击连接器配置的绿色加号（*+*）或编辑符号 image:EditIcon.png[EditIcon]后，全局元素属性屏幕将显示常规，高级，属性，重新连接，文件和备注标签。您可以根据需要指定可选的服务器属性信息或备注。本节将介绍其余的屏幕。

=== 全局元素属性 - 常规选项卡

image:sftp_gen_gen.png[sftp_gen_gen]

[%header,cols="2*"]
|===
| {字段{1}}说明
| *Name*  |配置名称
| *Output Pattern* a |
_（仅适用于出站SFTP端点。）_指定命名从File端点发送到连接的文件系统的文件的模式。如果未设置，则File端点将使用用于传入文件的相同文件命名模式。

例：

[source, code, linenums]
----
#[header:inbound:originalFilename]
----

| *Identity File*  | PKI私钥文件的文件位置。
| *Passphrase*  |身份文件的密码（如果需要）。
| *Show password*  |设置为使密码字段中的字符可见。
|===

=== 全局元素属性 - 高级选项卡

image:sftp_gen_adv.png[sftp_gen_adv]

[%header,cols="2*"]
|===
| {字段{1}}说明
| *Dispatched Pool Fatctory*  |配置Bean属性。
| *Dynamic Notifications*  |指出您是否需要动态电子邮件通知。
| *Validate Connections*  |验证连接。默认启用。
| *Connection Pool Size*  |为一个或多个活动连接创建连接池大小。指定一个没有池大小限制的负数，或者设置为零（0）以指示不使用连接池。
| *Polling Frequency*  |检查读取目录的频率（以毫秒为单位）。读取目录由监听组件的端点指定。
| *File Age* a |
消耗文件之前，Mule需要等待的最小时间（以毫秒为单位）。这允许在处理之前完成文件写入。

*Note*：Mule服务器和SFTP服务器必须具有同步时间才能正确工作。

| *Size Check Wait Time*  |等待大小检查之间的时间（以毫秒为单位），以确定文件是否已准备好进行处理。这允许在处理之前完成文件写入。您可以通过设置为负数或省略值来禁用此功能。启用后，Mule将执行两次大小检查，等待指定的两次通话之间的时间。如果两个检查都返回相同的值，则文件已准备好处理。
|===

=== 全局元素属性 - 重新连接选项卡

image:sftp_gen_reconn.png[sftp_gen_reconn]

[%header,cols="2*"]
|===
| {字段{1}}说明
| *Do not use a Reconnection strategy*  |在SFTP连接失败的情况下禁用策略。
| *Standard Reconnection*  |启用重新连接策略，其中Mule重新尝试重新连接次数，并等待尝试次数之间的毫秒数。
| *Frequency (ms)*  | Mule在发生故障后尝试重新建立SFTP连接时应该等待的毫秒数。
| *Reconnection Attempts*  | Mule在连接失败后应该尝试重新建立SFTP连接的次数。
| *Reconnect Forever*  |如果您希望Mule在失败后继续尝试重新连接SFTP连接，请点击。 Mule在尝试重新连接之间继续等待*Frequency*毫秒。
| *Custom Reconnection*  |允许您指定一个文件，其中包含用于定义连接策略的自定义属性。该文件包含RetryPolicyTemplate接口的类定义。
| *Class*  |包含RetryPolicyTemplate接口的类定义的文件的路径。
| *Properties*  |要为RetryPolicyTemplate接口设置的属性。
|===

=== 全局元素属性 - 文件选项卡

image:sftp_gen_file.png[sftp_gen_file]

[%header,cols="2*"]
|===
| {字段{1}}说明
| *Archive Directory*  | _（仅适用于入站SFTP端点）._文件归档的Mule服务器上的目录。在启动Mule进行应用程序部署之前创建此文件夹。 Mule运行的用户必须有权读取和写入文件夹。
| *Archive Temporary Receiving Directory*  | _（仅适用于入站SFTP端点）._指定存档文件临时保存的目录，然后将其转发到存档目录。如果执行存档，则必须配置此临时目录。
| *Archive Temporary Sending Directory*  | _（仅适用于入站SFTP端点）._指定存档文件在发送到出站SFTP端点之前的存储目录。这应该是归档目录的子目录，并且必须在实施归档时指定。
| *Duplicate Handling*  | _（仅适用于出站SFTP端点）._定义重复情况下的行为。
| *Temp Directory Inbound*  |接收传入文件的入站SFTP终结点文件夹中的目录。确保将`mule`用户配置为创建临时文件夹。该文件夹用于重新启动失败的文件传输。
| *Temp Directory Outbound*  |出站SFTP端点文件夹中发送传出文件前的目录。确保将`mule`用户配置为创建临时文件夹。
| *Keep File On Error*  |当文件移动到其中一个临时目录时，单击此按钮为文件分配一个唯一的基于时间和日期的名称戳记。
| *Auto Delete*  | _（仅适用于入站SFTP端点）_。单击此框可在文件读取后删除文件。 +
| *Use Temp File Timestamp Suffix*  |此字段使用文件移动到临时目录时的本地时间，为temp目录中的文件提供保证的唯一名称。
| *File Parser*  |设置`file-custom-filename-parser`或`file:expression-filename-parser`。
|===

== 高级选项卡

image:studio-sftp-adv.png[工作室SFTP-ADV]

[%header,cols="2*"]
|===
| {字段{1}}说明
| *Address*  |输入此端点的地址，例如http：// localhost：22 / file。
| *Response Timeout*  |指定端点必须等待响应的时间（以毫秒为单位）。
| *Encoding*  |从下拉列表中选择用于消息数据的字符集。 （即，UTF-8）。
| *Disable Transport Transformer*  |如果您不想使用端点默认响应传输，请选中此框。
| *MIME Type*  |从下拉列表中选择此端点支持的格式之一。
| *Connector Endpoint*  |使用下拉列表选择以前配置的全局端点模板（如果存在）。如果您尚未为此类端点创建全局元素，请通过单击*Add*并完成出现的窗格中的字段来完成。点击*Edit*修改先前创建的全局元素。
| *Polling Frequency*  | _（仅适用于入站SFTP端点）._指定检查传入消息的频率。默认值是*1000*毫秒。
| *File Age*  | _（仅适用于入站SFTP端点）._设置文件处理前必须等待的最短时间段。这有助于确保在开始处理之前全部收到长文件。但是，Mule和SFTP服务器必须处于同步时间才能使此功能正常工作。
| *Size Check Wait Time*  | _（仅适用于入站SFTP端点）._大小检查之间的等待时间（以毫秒为单位），用于确定文件是否已准备好进行处理。
| *Identity File and Passphrase Information*  | PKI身份验证信息。
| *Enable default events tracking*  |为此端点启用默认 link:/mule-user-guide/v/3.5/business-events[业务事件]跟踪。
|===

== 变形金刚标签

image:studio-sftp-trans.png[工作室SFTP反]

[%header,cols="2*"]
|===
| {字段{1}}说明
| *Request Transformer References*  |输入一个同步转换器列表，它将在发送到传输器之前应用于请求。
| *Response Transformer References*  |输入一个同步转换器列表，它将在传输返回之前应用于响应。
|===

== 文件选项卡

image:studio-sftp-file-out.png[工作室SFTP文件出]

[%header,cols="2*"]
|===
| {字段{1}}说明
| *Duplicate Handling*  | _（仅适用于出站SFTP端点）._定义重复情况下的行为。
| *Temp Directory*  |接收传入文件的入站SFTP终结点文件夹中的目录，或者在出站SFTP终结点的情况下，传出文件在发送前暂存的目录。
| *Keep File On Error*  | _（仅适用于出站SFTP端点）_。如果为true，则在写入出站端点时发生错误时，入站端点上的文件不会被删除。
| *Auto Delete*  | _（仅适用于入站SFTP端点）_。选中此框可在文件读取后删除文件。
|===

== 另请参阅

有关使用XML编辑器设置SFTP端点属性的详细信息，请参阅 link:/mule-user-guide/v/3.5/sftp-transport-reference[SFTP传输参考]。
